--- a/Project_Template.vcxproj.filters
+++ b/Project_Template.vcxproj.filters
@@ -39,9 +39,6 @@
     <ClCompile Include="scenebasic_uniform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\Public\OpenGL\lib\src\glad.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="helper\trianglemesh.cpp">
       <Filter>helper</Filter>
     </ClCompile>
@@ -68,6 +65,9 @@
     </ClCompile>
     <ClCompile Include="helper\stb\stb_image.cpp">
       <Filter>helper\stb</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\rayray\OpenGL\lib\src\glad.c">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
