PBR and part with bug

--- a/Project_Template.vcxproj.filters
+++ b/Project_Template.vcxproj.filters
@@ -69,12 +69,21 @@
     <ClCompile Include="C:\Users\rayray\OpenGL\lib\src\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="helper\grid.cpp">
+      <Filter>helper</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="shader\basic_uniform.frag">
       <Filter>shaders</Filter>
     </None>
     <None Include="shader\basic_uniform.vert">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\basic_fire.vert">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader\basic_fire.frag">
       <Filter>shaders</Filter>
     </None>
   </ItemGroup>
@@ -134,6 +143,15 @@
       <Filter>helper</Filter>
     </ClInclude>
     <ClInclude Include="helper\texture.h">
+      <Filter>helper</Filter>
+    </ClInclude>
+    <ClInclude Include="helper\random.h">
+      <Filter>helper</Filter>
+    </ClInclude>
+    <ClInclude Include="helper\grid.h">
+      <Filter>helper</Filter>
+    </ClInclude>
+    <ClInclude Include="helper\particleutils.h">
       <Filter>helper</Filter>
     </ClInclude>
   </ItemGroup>
